gitops/platform-apps/pbs/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: pbs
  namespace: pbs
subsets:
  - addresses:
      - ip: __PBS_HOST_IP__
    ports:
      - name: https
        port: 8007
        protocol: TCP
