gitops/platform-apps/pbs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pbs
  namespace: pbs
spec:
  ports:
    - name: https
      port: 8007
      protocol: TCP
      targetPort: 8007
  type: ClusterIP
