gitops/platform-apps/pbs/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pbs
  namespace: pbs
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pbs.__ZONE_NAME__`)
      services:
        - kind: Service
          name: pbs
          port: 8007
          scheme: https
          serversTransport: pbs-server-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pbs-netbird
  namespace: pbs
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`pbs.__ZONE_NAME__`)
      services:
        - kind: Service
          name: pbs
          port: 8007
          scheme: https
          serversTransport: pbs-server-transport
